--- a/web/index.html
+++ b/web/index.html
@@ -7,7 +7,7 @@
         <title>Vite + Svelte + TS</title>
     </head>
 
-    <body class="w-screen h-screen" data-theme="my-custom-theme">
+    <body class="w-screen h-screen overflow-hidden" data-theme="my-custom-theme">
         <div class="w-full h-full min-h-screen" id="app"></div>
         <script type="module" src="/src/main.ts"></script>
     </body>
